REALLY fix z-index

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -1,7 +1,3 @@
-/*snipcart change*/
-.snipcart-modal__container {
-  z-index: 150 important;
-}
 
 /* Stygian Generator */
 .stygian-card {
